@@ -121,7 +121,7 @@ class CPie extends CGraphDraw{
 	return $this->type;
 	}
 
-	protected function calc3dhight($height){
+	protected function calc3dheight($height){
 		$this->graphheight3d = (int) ($height/20);
 	}
 
@@ -526,7 +526,7 @@ class CPie extends CGraphDraw{
 		$this->sizeX = min($this->sizeX,$this->sizeY);
 		$this->sizeY = min($this->sizeX,$this->sizeY);
 
-		$this->calc3dhight($this->sizeY);
+		$this->calc3dheight($this->sizeY);
 
 		$this->exploderad = (int) $this->sizeX / 100;
 		$this->exploderad3d = (int) $this->sizeX / 60;
